--- a/style_list.css
+++ b/style_list.css
@@ -49,9 +49,25 @@ table {
     border-radius: 5px;
     font-weight: bold;
   }
+
+  a[href='proses_logout.php'] {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    margin-left: 10px;
+    background-color: #dc3545;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+  }
   
   a[href='register.html']:hover {
     background-color: #45a049;
+  }
+  
+  a[href='proses_logout.php']:hover {
+    background-color: #dc3545;
   }
   
   body {
